finish union agent without checking
